# math_search

./: .gitignore  CMakeLists.txt  Makefile  README.md  wordfreq.txt
KeyWord/: 一元一次方程.q  乘方.q  乘法交换律.q  乘法结合律.q  倒数.q  单项式.q  合并同类项.q  同类项.q  多项式.q  多项式的次数.q  幂.q  指数和底数.q  整式.q  方程.q  有理数乘法法则.q  有理数减法法则.q  有理数加法.q  有理数加法交换律.q  有理数除法法则.q  绝对值.q
LaTexDoc/: book106-110.tex  book11-15.tex  book111-115.tex  book16-20.tex  book21-25.tex  book26-30.tex  book31-35.tex  book36-40.tex  book40-45.tex  book41-45.tex  book46-50.tex  book51-55.tex  book51-56.tex  book56-60.tex  book6-10.tex  book61-65.tex  book66-70.tex  book71-75.tex  book76-80.tex  book81-85.tex  book86-90.tex  book91-95.tex  book96-100.tex
math_back/: .\data.gexf  app.py  interface.py  mock.py  parser.py  relation.py
math_back/static/: book.gexf
math_front/: package-lock.json  package.json
math_front/public/: index.html
math_front/src/: App.vue  main.js  router.js
src/: cmd.cpp  cmd.h  cre.hpp  file_path.h  interface.h  keyword.cpp  keyword.h  lex.cpp  lex.h  main.cpp  pretreat.cpp  pyinterface.cpp  query_comm_impl.cpp  query_result.h  query_type.h  segment.cpp  segment.h  segment_words_impl.cpp  store.cpp  store.h  struct_tree.h  text.cpp  text.h  tree.cpp  tree.h  utf.cpp  utf.h  util.cpp  util.h  word.h  word_query.cpp  word_query.h  word_segment.cpp  word_segment.h  yare.hpp
test/: lex.cpp  main.cpp  parser.cpp  store.cpp  store.h  test.cpp  test_latex.cpp  text.cpp  text.h
text_blocks/concept/:  1.2.4 绝对值  1.2.1 有理数  1.5.1 乘方  1.5.2 科学记数法  2.1 整式  2.2整式的加减  3.1.1 一元一次方程  44  55  (+13 more)
zzz/: lex.cpp
(+125 files in other folders)
